# sui-numi

./: .gitignore  readme.md
aggregator/: .env.example  Cargo.toml  build.rs
aggregator/src/: config.rs  control.rs  errors.rs  lib.rs  main.rs  metrics.rs  quant.rs  signing.rs  sponsorship.rs  state.rs
aggregator/src/router/: README.md  execution.rs  mod.rs  router.rs  routes.rs  selector.rs  validation.rs  validator.rs
aggregator/src/transport/: graphql.rs  grpc.rs  jsonrpc.rs  mod.rs
aggregator/src/venues/: adapter.rs  amm.rs  deepbook.rs  mod.rs
