[package]
name = "ultra-aggr"
version = "0.1.0"
edition = "2021"

[features]
# Enable gRPC execute path when your provider supports TransactionExecutionService/ExecuteTransaction.
grpc-exec = []

[dependencies]
anyhow = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
config = "0.14"
url = "2.5"
# HTTP for JSON-RPC fallback execution
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "zstd", "rustls-tls"] }
# gRPC client stack
tonic = { version = "0.11", features = ["tls", "gzip"] }
prost = "0.12"
prost-types = "0.12"
# crypto for signing
ed25519-dalek = { version = "2", features = ["rand_core"] }
blake2 = "0.10"
base64 = "0.22"
hex = "0.4"
rand_core = "0.6"
# backoff + jitter
backoff = { version = "0.4", features = ["tokio"] }
# tokio stream utilities
tokio-stream = "0.1"
# metrics
prometheus = "0.13"
once_cell = "1"
# Sui types for ObjectRef and other types
sui-types = { git = "https://github.com/MystenLabs/sui", package = "sui-types", branch = "main" }

# DeepBook v3 Rust SDK (the repository you provided).
# Using local vendor copy with mutability fix
sui-deepbookv3 = { path = "../vendor/sui-deepbookv3", package = "sui-deepbookv3" }
# Sui SDK for building transactions (track Mysten Labs workspace)
sui-sdk = { git = "https://github.com/MystenLabs/sui", package = "sui-sdk", branch = "main" }
# BCS serialization
bcs = "0.1"
# HTTP server for API endpoints
axum = { version = "0.7", features = ["json"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

[build-dependencies]
tonic-build = "0.11"


# Numan Thabit 2025 Nov

